fixed the last of the SV issues; 6 failing